modules/gdscript/tests/scripts/analyzer/errors/static_constructor_with_return_type.gd
static func _static_init() -> int:
	print("static init")

func test():
	print("done")
